last_usage field to calculate correctly, cron added
